[Update] Change protocol url base

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BASE_URL="http://symfony.mantenimientoparatuhogar.co"
+BASE_URL="https://symfony.mantenimientoparatuhogar.co"
 
 USERNAME="admin@admin.com"
 PASS="ADMIN"
