[BugFix] Fix Server Error Production

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 BASE_URL="https://symfony.mantenimientoparatuhogar.co"
-
 USERLOGIN="admin@admin.com"
 PASS="ADMIN"
+HOST="https://new-universe.vercel.app"
