--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^1.2.4",
     "framer-motion": "^6.5.1",
     "next": "12.2.2",
     "react": "18.2.0",
