--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^1.2.4",
+    "@tinymce/tinymce-react": "^4.2.0",
     "framer-motion": "^6.5.1",
     "next": "12.2.2",
-    "next-remove-imports": "^1.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-moment": "^1.1.2"
+    "react-moment": "^1.1.2",
+    "slate": "^0.82.1",
+    "slate-react": "^0.82.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
